syntax = "proto3";

message BadRequestResponseDto {
  string message = 1;
}
