syntax = "proto3";

message InternalServerErrorDto {
  string error = 1;
  string message = 2;
}
